Hide in VSCode too

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "images/*.s": true,
         "*.elf": true,
         "*.gba": true,
-        "**/*.ase": true
+        "**/*.ase": true,
+        "*.sav": true
     }
 }
