--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "*.elf": true,
         "*.gba": true,
         "**/*.ase": true,
-        "*.sav": true
+        "*.sav": true,
+        "docs/": true
     }
 }
